src/testing/e2e/frameworktest/sampleapps/go-glibc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-glibc
  name: test-go-glibc
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-glibc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        oneagent.dynatrace.com/technologies: go
        oneagent.dynatrace.com/failure-policy: fail
      labels:
        app: go-glibc
    spec:
      containers:
        - command:
            - /app/app
          args:
            - "8080"
          image: docker.io/debian:stretch
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 600
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          name: app
          env:
            - name: DT_DEBUGFLAGS
              value: debugBootstrapNative=true
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              memory: 400Mi
            limits:
              memory: 600Mi
          volumeMounts:
            - mountPath: /app
              name: artefact
      initContainers:
        - args:
            - -c
            - go build -o /app/app /opt/go-script/main.go
          command:
            - /bin/sh
          env:
          - name: GOCACHE
            value: /tmp/go-build-cache
          image: docker.io/golang:1.15.5
          imagePullPolicy: IfNotPresent
          name: artefact
          volumeMounts:
            - mountPath: /app
              name: artefact
            - mountPath: /opt/go-script/
              name: go-script
      restartPolicy: Always
      securityContext:
        runAsUser: 1001
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: artefact
        - name: go-script
          configMap:
            name: go-script
