src/testing/e2e/frameworktest/sampleapps/no-internet-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test
spec:
#  podSelector:
#    matchLabels:
#      run: nginx
  podSelector: {}

  policyTypes:
#  - Ingress
  - Egress
#  ingress:
#  - from:
#    - ipBlock:
#        cidr: 172.17.0.0/16
#        except:
#        - 172.17.1.0/24
#    - namespaceSelector:
#        matchLabels:
#          project: myproject
#    - podSelector:
#        matchLabels:
#          role: frontend
#    ports:
#    - protocol: TCP
#      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector: {}
