src/testing/e2e/frameworktest/sampleapps/socks5-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torproxy
  labels:
    app: torproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torproxy
  template:
    metadata:
      labels:
        app: torproxy
    spec:
      containers:
      - name: torproxy
        imagePullPolicy: Always
        image: xxradar/torproxy:0.1
        ports:
        - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: torproxy-clusterip
spec:
  ports:
  - port: 9050
    protocol: TCP
    targetPort: 9050
  selector:
    app: torproxy
